java multithreading working, but different result/image :-(